--- a/menu.html
+++ b/menu.html
@@ -11,12 +11,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="fileUtils.js"></script>
-    <script src="menuController.js"></script>
+    <script src="js/fileUtils.js"></script>
+    <script src="js/menuController.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
-    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="assets/styles/mobile-styles.css" />
+    <link rel="stylesheet" type="text/css" href="lib/styles/styles.css" />
+    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="lib/styles/mobile-styles.css" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
 
 
