added example for demo

--- a/ar.html
+++ b/ar.html
@@ -45,7 +45,7 @@
 
     </a-marker>
     <a-entity camera mouse-cursor></a-entity>
-    <a-cursor id="cursor" visible="false" fuse="false" color="yellow"></a-cursor>
+    <a-cursor id="spinner" visible="false" fuse="false" color="yellow"></a-cursor>
     </a-entity>
   </a-scene>
 
