--- a/arEmu.html
+++ b/arEmu.html
@@ -35,7 +35,7 @@
 
 
   <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
-  <a-scene id="scene" markerhandler render-queue embedded arjs='sourceType:image;sourceUrl: other/kanji-marker.png; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;'
+  <a-scene id="scene" markerhandler cursor="rayOrigin: mouse" render-queue embedded  arjs='sourceType:image;sourceUrl: other/kanji-marker.png; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;'
     vr-mode-ui="enabled: false;">
 
 
@@ -44,8 +44,8 @@
     <a-marker id="multi" preset='area'></a-marker>
 
     </a-marker>
-    <a-entity camera id="cursor" ></a-entity>
 
+    <a-entity camera id="spinner"></a-entity>
 
     </a-entity>
   </a-scene>
