--- a/genMenu.html
+++ b/genMenu.html
@@ -46,11 +46,12 @@
 
 
 <script>
-    var a = window.location.toString();
-    var name = a.substring(a.indexOf("?") + 1);
+    let a = window.location.toString();
+    let parameter = a.substring(a.indexOf("?") + 1);
+    let url = a.substring(0,a.indexOf("/static"));
 
     const Http = new XMLHttpRequest();
-    Http.open("GET", name);
+    Http.open("GET", url+parameter);
     Http.send();
     Http.onreadystatechange = (e) => {
         if (IsJsonString(Http.responseText)) {
