fixed json url bug #13

--- a/genMenu.html
+++ b/genMenu.html
@@ -40,6 +40,7 @@
             <input type="checkbox" class="form-check-input" id="arCheck">
             <label class="form-check-label" for="arCheck">AR</label>
         </div>
+
         <a onclick="goTo()" class="btn btn-primary play-overlay"></a>
     </div>
 </div>
@@ -49,15 +50,8 @@
     let a = window.location.toString();
     let parameter = a.substring(a.indexOf("?") + 1);
     let url = a.substring(0,a.indexOf("/static"));
-
-    const Http = new XMLHttpRequest();
-    Http.open("GET", url+parameter);
-    Http.send();
-    Http.onreadystatechange = (e) => {
-        if (IsJsonString(Http.responseText)) {
-            parseJson(Http.responseText, loadActivity);
-        }
-    };
-    $("#arCheck").prop('checked', true);</script>
+    loadJSON(url+parameter, loadActivity);
+    $("#arCheck").prop('checked', true);
+</script>
 </body>
 </html>
