--- a/menu.html
+++ b/menu.html
@@ -39,8 +39,10 @@
 
           <script>
               var a = window.location.toString();
-                var name = a.substring(a.indexOf("?") + 1);
-          loadMenu(name);
-          console.log(name);
-          $("#arCheck").prop('checked', true);</script>
+              var name = a.substring(a.indexOf("?") + 1);
+              loadMenu("activities/"+name+".menu");
+              console.log(name);
+              $("#arCheck").prop('checked', true);
+          </script>
+  </body>
 </html>
