--- a/menu.html
+++ b/menu.html
@@ -32,6 +32,10 @@
                         <input type="checkbox" class="form-check-input" id="arCheck">
                         <label class="form-check-label" for="arCheck">AR</label>
                       </div>
+                        <input class="form-control" id="passwordInput" placeholder="Código">
+                        <div id="invalid" class="invalid-feedback">
+                         Error...
+                        </div>
                 <a onclick="goTo()" class="btn btn-primary play-overlay"></a>
             </div>
           </div>
@@ -40,9 +44,9 @@
           <script>
               var a = window.location.toString();
               var name = a.substring(a.indexOf("?") + 1);
-              loadMenu("activities/"+name+".menu");
-              console.log(name);
+              $("#passwordInput").hide();
               $("#arCheck").prop('checked', true);
+              loadMenu("activities/"+name+".menu");
           </script>
   </body>
 </html>
