Logger field for Activity's ID added

--- a/arEmu.html
+++ b/arEmu.html
@@ -16,7 +16,6 @@
   <script src="lib/aframe-ar.js"></script>
   <script src="js/Controller.js"></script>
 
-  
 
 </head>
 
@@ -41,6 +40,7 @@
 
     <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
     <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
+    <a-marker id="custom" type="pattern" preset="custom" url="other/hiroInvertidoV2.patt"></a-marker>
     <!--<a-marker id="multi" preset='area'></a-marker>Disabled due to marker loading issues-->
 
     </a-marker>
