Logger field for Activity's ID added (#26)
* Logger field for Activity's ID added

* Delete arEmu2.html

* Delete pattern-hiro_invertido.patt

* Fixing cookie bug

--- a/ar.html
+++ b/ar.html
@@ -41,6 +41,7 @@
 
     <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
     <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
+    <a-marker id="custom" type="pattern" preset="custom" url="other/hiroInvertidoV2.patt"></a-marker>
     <!--<a-marker id="multi" preset='area'></a-marker>Disabled due to marker loading issues-->
 
     </a-marker>
@@ -52,7 +53,8 @@
 
   <script>
     hideOrShow("playButton");
-    run();</script>
+    run();
+  </script>
 </body>
 
 </html>
